# secondbrain

./: .env.example  .gitignore  README.md  agent.md  check-ui.ps1  pyproject.toml  requirements.txt  soul.md  start-ui.ps1  stop-ui.ps1  user.md
drillhole_validation/: default.md
secondbrain/: __init__.py  bot.py  cli.py  config.py  heartbeat.py  llm_client.py  memory_manager.py  models.py  safe_fs.py  templates.py  voice.py
secondbrain/defaults/: userConfig.json
secondbrain/skills/: __init__.py  doc_skill.py  drillhole_validation_skill.py  filesystem_skill.py  sql_server_skill.py
sql_schema/: default.md
tests/: test_dh_commands.py  test_dh_config_api.py  test_dh_config_ui.py  test_drillhole_validation_skill.py  test_filesystem_skill.py  test_llm_detection.py  test_safe_fs.py  test_sql_commands.py  test_sql_server_skill.py  test_ui_runtime.py  test_voice.py
ui/: __init__.py  commands.py  config.py  dh_format.py  dh_routing.py  history.py  runtime.py  server.py  tool_loop.py  workspace.py
ui/static/: app.js  styles.css
ui/templates/: index.html
workspace-demo/: agent.md  soul.md
workspace-demo/nested/: beta.md
